# task-mannager-pro-v-3-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  ai.py  alembic.ini  audit.py  auth.py  comments.py  config.py  crud_pro.py  database.py  database_pro.py  docker-compose.yml  main.py  main_pro.py  models.py  models_pro.py  notification_delivery.py  notifications.py  permissions.py  projects.py  pytest.ini  requirements.txt  schemas_pro.py  security.py  storage.py  tags.py  task_api.py  tasks.py  test_permissions_notifications.py  test_workflow_ai_devops.py  users.py  utils.py  validation.py  validators.py  worker.py  проект sqlalchemy_pg_practice.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
scripts/: api_flow.py
sqlalchemy_pg_practice/: database.py  main.py  models.py  requirements.txt
task_manager/: alembic.ini  requirements.txt
task_manager/task manager pro/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt
task_manager/task manager pro/.github/workflows/: ci.yml
task_manager/task manager pro/app/: auth.py  config.py  crud_pro.py  database_pro.py  main_pro.py  models_pro.py  notification_delivery.py  permissions.py  schemas_pro.py  security.py
task_manager/task manager pro/app/routers/: __init__.py  ai.py  audit.py  auth.py  comments.py  notifications.py  projects.py  tags.py  tasks.py  users.py
task_manager/task manager pro/examples/: auth_example.py
task_manager/task manager pro/frontend/: next.config.mjs  package-lock.json  package.json
task_manager/task manager pro/frontend/components/: KanbanBoard.js  NavBar.js  TaskCard.js
task_manager/task manager pro/frontend/context/: AuthContext.js
task_manager/task manager pro/frontend/pages/: dashboard.js  index.js  login.js  profile.js  projects.js  register.js
task_manager/task manager pro/frontend/pages/projects/: [id].js
task_manager/task manager pro/frontend/pages/tasks/: [id].js
task_manager/task manager pro/frontend/styles/: globals.css
task_manager/task manager pro/routers/: auth.py
task_manager/task manager pro/scripts/: export_openapi.py
task_manager/task manager pro/tests/: conftest.py  conftest_pro.py  test_api_pro.py  test_auth.py  test_config.py  test_crud_pro.py  test_security.py
tests/: conftest.py  test_task_api.py
(+10 files in other folders)
